--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Drama'
+- GITenberg
 title: "Á hora do crime\r\nphantasia dramatica em 1 acto a proposito do assassinato\
   \ do General Prim"
 url: http://www.gutenberg.org/ebooks/20999
